# rust-switch-opengl

./: .gitignore  Cargo.toml  Dockerfile  build.rs  wrapper.h
src/: main.rs
